# kanbanize

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kanbanize/: docker-compose.yml  firestore_adapter.py  rabbit_sender.py  schemas.py  validation.py
kanbanize/data_structures/: schemas.py
kanbanize/main_api/: Dockerfile  adapters.py  main.py  requirements.txt  rest.py  run.py  schemas.py
kanbanize/main_api/rest/: rest.py  table.py  task.py
kanbanize/tables/: Dockerfile  crud.py  database.py  listener.py  requirements.txt  rest.py  table_rest.py  worker.py
kanbanize/tasks/: Dockerfile  crud.py  database.py  events.py  listener.py  rabbit_sender.py  requirements.txt  rest.py  tasks_rest.py  validation.py
tests/: conftest.py
tests/rest/: test_group.py  test_table.py  test_task.py
tests/tables/: conftest.py  test_crud_tables.py  test_rest_tables.py
tests/tasks/: conftest.py  test_crud.py  test_events.py  test_rest.py
tests/tasks_worker/: conftest.py  test_crud.py  test_rest.py
